--- a/src/main/webapp/app/entities/submissions/submissions.component.html
+++ b/src/main/webapp/app/entities/submissions/submissions.component.html
@@ -1,7 +1,7 @@
 <div>
     <h2 id="page-heading">
         <span jhiTranslate="gradingApp.submissions.home.title">Submissions</span>
-        <button id="jh-create-entity" class="btn btn-primary float-right jh-create-entity create-submissions" [routerLink]="['/submissions/new']">
+        <button id="jh-create-entity" class="btn btn-primary float-right jh-create-entity create-submissions" [routerLink]="['/submissions/new']" style="color: white">
             <fa-icon [icon]="'plus'"></fa-icon>
             <span  jhiTranslate="gradingApp.submissions.home.createLabel">
             Create new Submissions
@@ -44,7 +44,7 @@
                             <fa-icon [icon]="'eye'"></fa-icon>
                             <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
                         </button>
-                        <button type="submit"
+                        <button type="submit" style="color: white"
                                 [routerLink]="['/submissions', submissions.id, 'edit']"
                                 class="btn btn-primary btn-sm">
                             <fa-icon [icon]="'pencil-alt'"></fa-icon>
