--- a/src/main/webapp/app/entities/submissions/submissions.component.html
+++ b/src/main/webapp/app/entities/submissions/submissions.component.html
@@ -1,17 +1,20 @@
 <div>
     <h2 id="page-heading">
-        <span jhiTranslate="gradingApp.submissions.home.title">Submissions</span>
-        <button id="jh-create-entity" class="btn btn-primary float-right jh-create-entity create-submissions" [routerLink]="['/submissions/new']" style="color: white">
-            <fa-icon [icon]="'plus'"></fa-icon>
-            <span  jhiTranslate="gradingApp.submissions.home.createLabel">
-            Create new Submissions
-            </span>
-        </button>
+       <span jhiTranslate="gradingApp.submissions.home.title">Submissions</span>
     </h2>
     <jhi-alert></jhi-alert>
     <br/>
     <div class="table-responsive" *ngIf="submissions">
-        <table class="table table-striped">
+        <div style="display: flex; margin-bottom: 50px;">
+            <button id="jh-create-entity" class="btn btn-primary float-right jh-create-entity create-submissions" [routerLink]="['/submissions/new']" style="color: white">
+                <fa-icon [icon]="'plus'"></fa-icon>
+                <span  jhiTranslate="gradingApp.submissions.home.createLabel"></span>
+            </button>
+        </div>
+        <h2 id="table-heading" style="margin-bottom: 10px;">
+            <span jhiTranslate="gradingApp.submissions.table.title"></span>
+        </h2>
+        <table class="table table-striped" style="margin-top: 10px;">
             <thead>
             <tr>
             <th><span jhiTranslate="global.field.id">ID</span></th>
