--- a/src/main/webapp/app/entities/fdai-nummer/fdai-nummer-update.component.html
+++ b/src/main/webapp/app/entities/fdai-nummer/fdai-nummer-update.component.html
@@ -16,7 +16,7 @@
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gradingApp.fdaiNummer.ip" for="field_ip">Ip</label>
-                    <input type="number" class="form-control" name="ip" id="field_ip"
+                    <input type="text" class="form-control" name="ip" id="field_ip"
                         [(ngModel)]="fdaiNummer.ip" />
                 </div>
 
