--- a/src/main/webapp/app/entities/submissions/submissions.component.html
+++ b/src/main/webapp/app/entities/submissions/submissions.component.html
@@ -2,6 +2,18 @@
     <jhi-alert></jhi-alert>
     <br/>
     <div class="table-responsive" *ngIf="submissions">
+        <div class="">
+            <button id="jh-create-entity" class="btn btn-primary float-right jh-create-entity create-submissions"
+                    (click)="clearData()">
+                <fa-icon [icon]="'times'"></fa-icon>
+                <span jhiTranslate="gradingApp.submissions.home.clearData"></span>
+            </button>
+            <button id="jh-create-entity" style="margin-right: 20px;"
+                    class="btn btn-primary float-right jh-create-entity create-submissions">
+                <fa-icon [icon]="'upload'"></fa-icon>
+                <span jhiTranslate="gradingApp.submissions.home.importCsv"></span>
+            </button>
+        </div>
         <h2 id="table-heading">
             <span jhiTranslate="gradingApp.submissions.table.title"></span>
         </h2>
@@ -22,13 +34,16 @@
                 <td>{{submissions.fdaiNumber}}</td>
                 <td>{{submissions.name}}</td>
                 <td>
-                    <a *ngIf="submissions.files" (click)="openFile(submissions.filesContentType, submissions.files)" jhiTranslate="entity.action.open">open</a>
-                    <span *ngIf="submissions.files">{{submissions.filesContentType}}, {{byteSize(submissions.files)}}</span>
+                    <a *ngIf="submissions.files" (click)="openFile(submissions.filesContentType, submissions.files)"
+                       jhiTranslate="entity.action.open">open</a>
+                    <span
+                        *ngIf="submissions.files">{{submissions.filesContentType}}, {{byteSize(submissions.files)}}</span>
                 </td>
                 <td>
-                    <button class="btn btn-primary" style="color: white" (click)="openFile(submissions.filesContentType, submissions.files)">
+                    <button class="btn btn-primary" style="color: white"
+                            (click)="openFile(submissions.filesContentType, submissions.files)">
                         <fa-icon [icon]="'file-pdf'"></fa-icon>
-                        <span  jhiTranslate="gradingApp.submissions.print"></span>
+                        <span jhiTranslate="gradingApp.submissions.print"></span>
                     </button>
                 </td>
             </tr>
@@ -38,17 +53,18 @@
 </div>
 
 
-<div>
+<div [hidden]="isLadmin()">
     <h2 id="page-heading">
-       <span jhiTranslate="gradingApp.submissions.home.title">Submissions</span>
+        <span jhiTranslate="gradingApp.submissions.home.title">Submissions</span>
     </h2>
     <jhi-alert></jhi-alert>
     <br/>
     <div class="table-responsive" *ngIf="submissions">
         <div class="upload__button">
-            <button id="jh-create-entity" class="btn btn-primary float-right jh-create-entity create-submissions" [routerLink]="['/submissions/new']" style="color: white">
+            <button id="jh-create-entity" class="btn btn-primary float-right jh-create-entity create-submissions"
+                    [routerLink]="['/submissions/new']" style="color: white">
                 <fa-icon [icon]="'plus'"></fa-icon>
-                <span  jhiTranslate="gradingApp.submissions.home.createLabel"></span>
+                <span jhiTranslate="gradingApp.submissions.home.createLabel"></span>
             </button>
         </div>
         <h2 id="table-heading">
@@ -57,14 +73,14 @@
         <table class="table table-striped">
             <thead>
             <tr>
-            <th><span jhiTranslate="global.field.id">ID</span></th>
-            <th><span jhiTranslate="gradingApp.submissions.fdaiNumber">Fdai Number</span></th>
-            <th><span jhiTranslate="gradingApp.submissions.name">Name</span></th>
-            <th><span jhiTranslate="gradingApp.submissions.course">Course</span></th>
-            <th><span jhiTranslate="gradingApp.submissions.subject">Subject</span></th>
-            <th><span jhiTranslate="gradingApp.submissions.exercises">Exercises</span></th>
-            <th><span jhiTranslate="gradingApp.submissions.files">Files</span></th>
-            <th></th>
+                <th><span jhiTranslate="global.field.id">ID</span></th>
+                <th><span jhiTranslate="gradingApp.submissions.fdaiNumber">Fdai Number</span></th>
+                <th><span jhiTranslate="gradingApp.submissions.name">Name</span></th>
+                <th><span jhiTranslate="gradingApp.submissions.course">Course</span></th>
+                <th><span jhiTranslate="gradingApp.submissions.subject">Subject</span></th>
+                <th><span jhiTranslate="gradingApp.submissions.exercises">Exercises</span></th>
+                <th><span jhiTranslate="gradingApp.submissions.files">Files</span></th>
+                <th></th>
             </tr>
             </thead>
             <tbody>
@@ -76,8 +92,10 @@
                 <td jhiTranslate="{{'gradingApp.Subject.' + submissions.subject}}">{{submissions.subject}}</td>
                 <td jhiTranslate="{{'gradingApp.Exercise.' + submissions.exercises}}">{{submissions.exercises}}</td>
                 <td>
-                    <a *ngIf="submissions.files" (click)="openFile(submissions.filesContentType, submissions.files)" jhiTranslate="entity.action.open">open</a>
-                    <span *ngIf="submissions.files">{{submissions.filesContentType}}, {{byteSize(submissions.files)}}</span>
+                    <a *ngIf="submissions.files" (click)="openFile(submissions.filesContentType, submissions.files)"
+                       jhiTranslate="entity.action.open">open</a>
+                    <span
+                        *ngIf="submissions.files">{{submissions.filesContentType}}, {{byteSize(submissions.files)}}</span>
                 </td>
                 <td class="text-right">
                     <div class="btn-group flex-btn-group-container">
