--- a/src/main/webapp/app/entities/fdai-nummer/fdai-nummer.component.html
+++ b/src/main/webapp/app/entities/fdai-nummer/fdai-nummer.component.html
@@ -7,6 +7,12 @@
             Create new Fdai Nummer
             </span>
         </button>
+        <button id="jh-create-entity1" class="btn btn-primary float-right jh-create-entity create-fdai-nummer" [routerLink]="['/fdai-nummer/new']" style="margin-right: 20px;">
+            <fa-icon [icon]="'plus'"></fa-icon>
+            <span  jhiTranslate="gradingApp.fdaiNummer.home.importfdai">
+            Import Fdai number
+            </span>
+        </button>
     </h2>
     <jhi-alert></jhi-alert>
     <br/>
