--- a/src/main/webapp/app/entities/fdai-nummer/fdai-nummer-update.component.html
+++ b/src/main/webapp/app/entities/fdai-nummer/fdai-nummer-update.component.html
@@ -2,6 +2,7 @@
     <div class="col-8">
         <form name="editForm" role="form" novalidate (ngSubmit)="save()" #editForm="ngForm">
             <h2 id="jhi-fdai-nummer-heading" jhiTranslate="gradingApp.fdaiNummer.home.createOrEditLabel">Create or edit a Fdai Nummer</h2>
+            <input type="checkbox" name="toggle" class="checkbox form-control" style="width: 30px;">
             <div>
                 <jhi-alert-error></jhi-alert-error>
                 <div class="form-group" [hidden]="!fdaiNummer.id">
