Show IP assigned to a student of LADMIN in the assigned student list

--- a/src/main/webapp/app/entities/active-users/active-users-detail.component.html
+++ b/src/main/webapp/app/entities/active-users/active-users-detail.component.html
@@ -21,6 +21,14 @@
                 <dd>
                     <span>{{activeUsers.active}}</span>
                 </dd>
+                <dt><span jhiTranslate="gradingApp.activeUsers.is_ip_address">Is Ip Address</span></dt>
+                <dd>
+                    <span>{{activeUsers.is_ip_address}}</span>
+                </dd>
+                <dt><span jhiTranslate="gradingApp.activeUsers.should_ip_address">Should Ip Address</span></dt>
+                <dd>
+                    <span>{{activeUsers.should_ip_address}}</span>
+                </dd>
             </dl>
 
             <button type="submit"
