--- a/src/main/webapp/app/entities/active-users/active-users-update.component.html
+++ b/src/main/webapp/app/entities/active-users/active-users-update.component.html
@@ -33,6 +33,16 @@
                     <input type="checkbox" class="form-control" name="active" id="field_active"
                         [(ngModel)]="activeUsers.active" />
                 </div>
+                <div class="form-group">
+                    <label class="form-control-label" jhiTranslate="gradingApp.activeUsers.is_ip_address" for="field_is_ip_address">Is Ip Address</label>
+                    <input type="text" class="form-control" name="is_ip_address" id="field_is_ip_address"
+                        [(ngModel)]="activeUsers.is_ip_address" />
+                </div>
+                <div class="form-group">
+                    <label class="form-control-label" jhiTranslate="gradingApp.activeUsers.should_ip_address" for="field_should_ip_address">Should Ip Address</label>
+                    <input type="text" class="form-control" name="should_ip_address" id="field_should_ip_address"
+                        [(ngModel)]="activeUsers.should_ip_address" />
+                </div>
 
             </div>
             <div>
