--- a/src/main/webapp/app/entities/fdai-nummer/fdai-nummer-update.component.html
+++ b/src/main/webapp/app/entities/fdai-nummer/fdai-nummer-update.component.html
@@ -2,7 +2,6 @@
     <div class="col-8">
         <form name="editForm" role="form" novalidate (ngSubmit)="save()" #editForm="ngForm">
             <h2 id="jhi-fdai-nummer-heading" jhiTranslate="gradingApp.fdaiNummer.home.createOrEditLabel">Create or edit a Fdai Nummer</h2>
-            <input type="checkbox" name="toggle" class="checkbox form-control" style="width: 30px;">
             <div>
                 <jhi-alert-error></jhi-alert-error>
                 <div class="form-group" [hidden]="!fdaiNummer.id">
@@ -10,15 +9,10 @@
                     <input type="text" class="form-control" id="id" name="id"
                         [(ngModel)]="fdaiNummer.id" readonly />
                 </div>
+
                 <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="gradingApp.fdaiNummer.fdainumber" for="field_fdainumber">Fdainumber</label>
-                    <input type="text" class="form-control" name="fdainumber" id="field_fdainumber"
-                        [(ngModel)]="fdaiNummer.fdainumber" />
-                </div>
-                <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="gradingApp.fdaiNummer.ip" for="field_ip">Ip</label>
-                    <input type="text" class="form-control" name="ip" id="field_ip"
-                        [(ngModel)]="fdaiNummer.ip" />
+                    <label class="form-control-label" jhiTranslate="gradingApp.fdaiNummer.ip">Ip</label>
+                    <input type="file" name="file" [(ngModel)]="file"/>
                 </div>
 
                 <div class="form-group">
