--- a/src/main/webapp/app/entities/fdai-nummer/fdai-nummer.component.html
+++ b/src/main/webapp/app/entities/fdai-nummer/fdai-nummer.component.html
@@ -1,13 +1,7 @@
 <div>
     <h2 id="page-heading">
         <span jhiTranslate="gradingApp.fdaiNummer.home.title">Fdai Nummers</span>
-        <button id="jh-create-entity" class="btn btn-primary float-right jh-create-entity create-fdai-nummer" [routerLink]="['/fdai-nummer/new']">
-            <fa-icon [icon]="'plus'"></fa-icon>
-            <span  jhiTranslate="gradingApp.fdaiNummer.home.createLabel">
-            Create new Fdai Nummer
-            </span>
-        </button>
-        <button id="jh-create-entity1" class="btn btn-primary float-right jh-create-entity create-fdai-nummer" [routerLink]="['/fdai-nummer/new']" style="margin-right: 20px;">
+        <button id="jh-create-entity1" class="btn btn-primary float-right jh-create-entity create-fdai-nummer" [routerLink]="['/fdai-nummer/new']">
             <fa-icon [icon]="'plus'"></fa-icon>
             <span  jhiTranslate="gradingApp.fdaiNummer.home.importfdai">
             Import Fdai number
