--- a/src/main/webapp/app/entities/fdai-nummer/fdai-nummer-update.component.html
+++ b/src/main/webapp/app/entities/fdai-nummer/fdai-nummer-update.component.html
@@ -12,7 +12,7 @@
 
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gradingApp.fdaiNummer.ip">Ip</label>
-                    <input type="file" name="file" [(ngModel)]="file"/>
+                    <input type="file" name="file" [(ngModel)]="file" (change)="importCsv($event)" [disabled]="!fdaiNummer.user"/>
                 </div>
 
                 <div class="form-group">
@@ -27,9 +27,9 @@
                 <button type="button" id="cancel-save" class="btn btn-secondary"  (click)="previousState()">
                     <fa-icon [icon]="'ban'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.cancel">Cancel</span>
                 </button>
-                <button type="submit" id="save-entity" [disabled]="editForm.form.invalid || isSaving" class="btn btn-primary">
-                    <fa-icon [icon]="'save'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.save">Save</span>
-                </button>
+                <!--<button type="submit" id="save-entity" [disabled]="editForm.form.invalid || isSaving" class="btn btn-primary">-->
+                    <!--<fa-icon [icon]="'save'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.save">Save</span>-->
+                <!--</button>-->
             </div>
         </form>
     </div>
