--- a/src/main/webapp/app/entities/fdai-nummer/fdai-nummer-update.component.html
+++ b/src/main/webapp/app/entities/fdai-nummer/fdai-nummer-update.component.html
@@ -1,6 +1,6 @@
 <div class="row justify-content-center">
     <div class="col-8">
-        <form name="editForm" role="form" novalidate (ngSubmit)="save()" #editForm="ngForm">
+        <form name="editForm" role="form" novalidate #editForm="ngForm">
             <h2 id="jhi-fdai-nummer-heading" jhiTranslate="gradingApp.fdaiNummer.home.createOrEditLabel">Create or edit a Fdai Nummer</h2>
             <div>
                 <jhi-alert-error></jhi-alert-error>
