--- a/src/main/webapp/app/entities/active-users/active-users.component.html
+++ b/src/main/webapp/app/entities/active-users/active-users.component.html
@@ -27,18 +27,56 @@
                 <td>{{activeUsers.login_time | date:'medium'}}</td>
                 <td>{{activeUsers.logout_time | date:'medium'}}</td>
                 <td>{{activeUsers.active}}</td>
-                <td>{{activeUsers.is_ip_address}}</td>
-                <td>{{activeUsers.should_ip_address}}</td>
+                <td [ngClass]="{
+                    'bg-danger text-white':activeUsers.is_ip_address != activeUsers.should_ip_address
+                }">{{activeUsers.is_ip_address}}</td>
+                <td [ngClass]="{
+                    'bg-danger text-white':activeUsers.is_ip_address != activeUsers.should_ip_address
+                }">{{activeUsers.should_ip_address}}</td>
             </tr>
             </tbody>
         </table>
     </div>
-    <div *ngIf="activeUsers && activeUsers.length">
-        <div class="row justify-content-center">
-            <jhi-item-count [page]="page" [total]="queryCount" [maxSize]="5" [itemsPerPage]="itemsPerPage"></jhi-item-count>
-        </div>
-        <div class="row justify-content-center">
-            <ngb-pagination [collectionSize]="totalItems" [(page)]="page" [pageSize]="itemsPerPage" [maxSize]="5" [rotate]="true" [boundaryLinks]="true" (pageChange)="loadPage(page)"></ngb-pagination>
-        </div>
+</div>
+
+
+<div>
+    <h2 id="page-heading1">
+        <span jhiTranslate="gradingApp.activeUsers.home.title">Active Users</span>
+    </h2>
+    <jhi-alert></jhi-alert>
+    <br/>
+    <div class="table-responsive" *ngIf="nonAssignedActiveUser">
+        <table class="table table-striped">
+            <thead>
+            <tr jhiSort [(predicate)]="predicate" [(ascending)]="reverse" [callback]="transition.bind(this)">
+                <th jhiSortBy="id"><span jhiTranslate="global.field.id">ID</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+                <th jhiSortBy="username"><span jhiTranslate="gradingApp.activeUsers.username">Username</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+                <th jhiSortBy="login_time"><span jhiTranslate="gradingApp.activeUsers.login_time">Login Time</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+                <th jhiSortBy="logout_time"><span jhiTranslate="gradingApp.activeUsers.logout_time">Logout Time</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+                <th jhiSortBy="active"><span jhiTranslate="gradingApp.activeUsers.active">Active</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+                <th jhiSortBy="is_ip_address"><span jhiTranslate="gradingApp.activeUsers.is_ip_address">Is Ip Address</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+                <th jhiSortBy="should_ip_address"><span jhiTranslate="gradingApp.activeUsers.should_ip_address">Should Ip Address</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+                <th></th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr *ngFor="let nonAssignedActiveUser of nonAssignedActiveUser ;trackBy: trackId" [ngClass]="{
+                    'bg-danger text-white':!activeUsers.login_time
+                }">
+                <td><a [routerLink]="['/active-users', activeUsers.id, 'view' ]">{{nonAssignedActiveUser.id}}</a></td>
+                <td>{{nonAssignedActiveUser.username}}</td>
+                <td>{{nonAssignedActiveUser.login_time | date:'medium'}}</td>
+                <td>{{nonAssignedActiveUser.logout_time | date:'medium'}}</td>
+                <td>{{nonAssignedActiveUser.active}}</td>
+                <td [ngClass]="{
+                    'bg-danger text-white':nonAssignedActiveUser.is_ip_address != nonAssignedActiveUser.should_ip_address
+                }">{{nonAssignedActiveUser.is_ip_address}}</td>
+                <td [ngClass]="{
+                    'bg-danger text-white':nonAssignedActiveUser.is_ip_address != nonAssignedActiveUser.should_ip_address
+                }">{{nonAssignedActiveUser.should_ip_address}}</td>
+            </tr>
+            </tbody>
+        </table>
     </div>
 </div>
