--- a/src/main/webapp/app/entities/fdai-nummer/fdai-nummer-update.component.html
+++ b/src/main/webapp/app/entities/fdai-nummer/fdai-nummer-update.component.html
@@ -11,16 +11,16 @@
                 </div>
 
                 <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="gradingApp.fdaiNummer.ip">Ip</label>
-                    <input type="file" name="file" [(ngModel)]="file" (change)="importCsv($event)" [disabled]="!fdaiNummer.user"/>
-                </div>
-
-                <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gradingApp.fdaiNummer.user" for="field_user">User</label>
                     <select class="form-control" id="field_user" name="user" [(ngModel)]="fdaiNummer.user" >
                         <option [ngValue]="null"></option>
                         <option [ngValue]="userOption.id === fdaiNummer.user?.id ? fdaiNummer.user : userOption" *ngFor="let userOption of users; trackBy: trackUserById">{{userOption.login}}</option>
                     </select>
+                </div>
+
+                <div class="form-group">
+                    <label class="form-control-label" jhiTranslate="gradingApp.fdaiNummer.ip" for="choose_file">Ip</label> <br>
+                    <input type="file" name="file" [(ngModel)]="file" (change)="importCsv($event)" [disabled]="!fdaiNummer.user" id="choose_file"/> <br>
                 </div>
             </div>
             <div>
