Update UI and translation files

--- a/src/main/webapp/app/entities/active-users/active-users.component.html
+++ b/src/main/webapp/app/entities/active-users/active-users.component.html
@@ -1,4 +1,4 @@
-<div>
+<div style="margin-bottom: 6em;">
     <h2 id="page-heading">
         <span jhiTranslate="gradingApp.activeUsers.home.title">Active Users</span>
     </h2>
@@ -42,7 +42,7 @@
 
 <div>
     <h2 id="page-heading1">
-        <span jhiTranslate="gradingApp.activeUsers.home.title">Active Users</span>
+        <span jhiTranslate="gradingApp.activeUsers.home.unassigned">Active Users</span>
     </h2>
     <jhi-alert></jhi-alert>
     <br/>
