--- a/src/main/webapp/app/entities/fdai-nummer/fdai-nummer-update.component.html
+++ b/src/main/webapp/app/entities/fdai-nummer/fdai-nummer-update.component.html
@@ -19,7 +19,7 @@
                 </div>
 
                 <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="gradingApp.fdaiNummer.ip" for="choose_file">Ip</label> <br>
+                    <label class="form-control-label" jhiTranslate="gradingApp.fdaiNummer.importcsv" for="choose_file">Ip</label> <br>
                     <input type="file" name="file" [(ngModel)]="file" (change)="importCsv($event)" [disabled]="!fdaiNummer.user" id="choose_file"/> <br>
                 </div>
             </div>
